# organizations-catalog-fastapi

./: .env  .gitignore  Dockerfile  compose.yaml  pyproject.toml
app/: __init__.py  auth.py  config.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/core/: __init__.py
app/db/: __init__.py
app/domains/activity/: __init__.py
app/domains/building/: __init__.py
app/domains/organization/: __init__.py  models.py
tests/: __init__.py
